--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       border-radius: 1.5rem;
       border: 1px solid #333;
     }
-    h1 {
+    h1, h2 {
       letter-spacing: 0.06em;
       text-transform: uppercase;
       font-size: 1.4rem;
@@ -46,8 +46,8 @@
 </head>
 <body>
   <div class="card">
-    <h1>Audio Hardware in the Works</h1>
-    <p>Custom drum machines, controllers, and effects.</p>
+    <h1>ARTIFICIAL ALLIANCE</h1>
+    <h2>Initializing...</h2>
     <p>Site under construction.</p>
     <div class="tag">.audio</div>
   </div>
