--- a/index.html
+++ b/index.html
@@ -15,32 +15,40 @@
       background: #050508;
       color: #f5f5f5;
     }
+
     .card {
       text-align: center;
       padding: 2.5rem 3rem;
       border-radius: 1.5rem;
-      border: 1px solid #333;
+      border: 1px solid #00ff6a;                 /* bright lime border */
+      box-shadow: 0 0 12px #00ff6a,              /* outer glow */
+                  0 0 24px #00ff6a55;            /* softer glow */
     }
+
     h1, h2 {
       letter-spacing: 0.06em;
       text-transform: uppercase;
       font-size: 1.4rem;
       margin-bottom: 0.75rem;
     }
+
     p {
       margin: 0.35rem 0;
       opacity: 0.85;
     }
+
     .tag {
       display: inline-block;
       margin-top: 1.2rem;
       padding: 0.35rem 0.9rem;
       border-radius: 999px;
-      border: 1px solid #555;
+      border: 1px solid #00ff6a;                /* lime border */
+      color: #00ff6a;                           /* lime text */
+      background: rgba(0, 255, 106, 0.08);       /* faint green tint */
+      box-shadow: 0 0 8px #00ff6a88;             /* glow */
       font-size: 0.8rem;
       text-transform: uppercase;
       letter-spacing: 0.12em;
-      opacity: 0.9;
     }
   </style>
 </head>
@@ -49,7 +57,6 @@
     <h1>ARTIFICIAL ALLIANCE</h1>
     <h2>Initializing...</h2>
     <p>Site under construction.</p>
-    <div class="tag">.audio</div>
   </div>
 </body>
 </html>
