--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Artificial Alliance</title>
 
-  <!-- Share Tech Mono for main title -->
+  <!-- Share Tech Mono for the brand wordmark -->
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 
   <style>
     :root {
-      --aa-green: #8bff87; /* softer lime */
-      --aa-bg: #050609;
-      --aa-card: #0b0f16;
+      --aa-green: #8bff87; /* softened lime */
+      --aa-bg: #040509;
+      --aa-screen: #05070d;
     }
 
     * {
@@ -25,94 +25,267 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background:
-        radial-gradient(circle at top, #151926 0, #050609 45%, #020308 100%);
-      color: #f5f5f5;
+      /* background: radial-gradient(circle at top, #121622 0, #040509 45%, #000 100%); */
+      color: #e6ffe8;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: #050505
     }
 
-    .card {
-      text-align: center;
-      padding: 2.5rem 3rem;
-      border-radius: 1.25rem;
-      border: 1px solid rgba(139, 255, 135, 0.7);
-      background:
-        linear-gradient(145deg, rgba(255,255,255,0.02), transparent 40%),
-        var(--aa-card);
-      box-shadow:
-        0 18px 40px rgba(0, 0, 0, 0.85),
-        0 0 0 1px rgba(255, 255, 255, 0.02),
-        0 0 18px rgba(139, 255, 135, 0.18);
-      max-width: 420px;
-      width: 90%;
+    .crt-frame {
       position: relative;
+      width: min(900px, 94vw);
+      aspect-ratio: 4 / 3;
+      background: radial-gradient(circle at center, #060910 0, #020308 65%, #000 100%);
+      border-radius: 26px;
+      padding: 2.2rem 2.6rem;
+      box-shadow:
+        0 26px 60px rgba(0, 0, 0, 0.9),
+        0 0 0 1px rgba(255, 255, 255, 0.03);
+      overflow: hidden;
     }
 
-    /* very subtle "scanline" texture just inside the card */
-    .card::before {
+    /* Inner screen surface with slight "bulge" feel */
+    .crt-screen {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      border-radius: 20px;
+      background: radial-gradient(ellipse at center, #05070d 0%, #020308 60%, #000 100%);
+      border: 1px solid rgba(139, 255, 135, 0.35);
+      padding: 1.6rem 1.9rem;
+      color: var(--aa-green);
+      text-shadow: 0 0 6px rgba(139, 255, 135, 0.45);
+      overflow: hidden;
+    }
+
+    /* subtle scanlines + vignette / curvature */
+    .crt-screen::before {
       content: "";
       position: absolute;
-      inset: 1px;
-      pointer-events: none;
+      inset: 0;
+      border-radius: inherit;
       background:
+        /* scanlines */
         repeating-linear-gradient(
           to bottom,
-          rgba(255, 255, 255, 0.02) 0px,
-          rgba(255, 255, 255, 0.02) 1px,
+          rgba(255, 255, 255, 0.04) 0px,
+          rgba(255, 255, 255, 0.04) 1px,
           transparent 2px,
           transparent 3px
-        );
-      opacity: 0.12;
-      border-radius: inherit;
+        ),
+        /* vignette */
+        radial-gradient(circle at center, transparent 0%, transparent 55%, rgba(0, 0, 0, 0.75) 100%);
       mix-blend-mode: soft-light;
+      opacity: 0.22;
+      pointer-events: none;
+      z-index: 1;
     }
 
-    h1 {
-      margin: 0 0 0.75rem 0;
+    /* grain layer */
+    .crt-screen::after {
+      content: "";
+      position: absolute;
+      inset: -10px;
+      border-radius: inherit;
+      pointer-events: none;
+      background-image:
+        radial-gradient(circle at 0 0, rgba(255,255,255,0.12) 0, transparent 55%),
+        radial-gradient(circle at 20% 20%, rgba(255,255,255,0.08) 0, transparent 55%),
+        radial-gradient(circle at 60% 0, rgba(255,255,255,0.12) 0, transparent 55%),
+        radial-gradient(circle at 90% 30%, rgba(255,255,255,0.08) 0, transparent 55%),
+        radial-gradient(circle at 10% 70%, rgba(255,255,255,0.1) 0, transparent 55%),
+        radial-gradient(circle at 50% 90%, rgba(255,255,255,0.07) 0, transparent 55%),
+        radial-gradient(circle at 90% 100%, rgba(255,255,255,0.1) 0, transparent 55%);
+      background-size: 140px 140px;
+      mix-blend-mode: soft-light;
+      opacity: 0.17;
+      filter: blur(0.4px);
+      animation: grain-move 1.2s steps(2, end) infinite;
+      z-index: 2;
+    }
+
+    /* Moving highlight line (CRT refresh sweep) */
+    .scanline {
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      height: 18%;
+      top: -25%;
+      background: linear-gradient(
+        to bottom,
+        transparent 0%,
+        rgba(255, 255, 255, 0.06) 45%,
+        rgba(255, 255, 255, 0.18) 50%,
+        rgba(255, 255, 255, 0.06) 55%,
+        transparent 100%
+      );
+      opacity: 0.35;
+      mix-blend-mode: screen;
+      animation: scan-down 4.5s linear infinite;
+      pointer-events: none;
+      z-index: 3;
+    }
+
+    .crt-content {
+      position: relative;
+      z-index: 4;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      gap: 1.4rem;
+    }
+
+    /* Brand wordmark */
+    .brand {
       font-family: 'Share Tech Mono', monospace;
-      letter-spacing: 0.16em;
+      letter-spacing: 0.18em;
       text-transform: uppercase;
-      font-size: 1.35rem;
-      color: var(--aa-green);
-      text-shadow: 0 0 6px rgba(139, 255, 135, 0.4);
+      font-size: 1.4rem;
+      margin: 0;
     }
 
-    h2 {
-      margin: 0 0 0.75rem 0;
+    .brand-subline {
       font-family: "Lucida Console", Monaco, monospace;
-      font-size: 0.95rem;
-      letter-spacing: 0.08em;
-      color: #d8fddb;
-      opacity: 0.9;
+      font-size: 0.8rem;
+      letter-spacing: 0.12em;
+      opacity: 0.78;
+      text-transform: uppercase;
     }
 
-    p {
-      margin: 0.35rem 0;
-      opacity: 0.82;
+    /* Command-line area */
+    .terminal {
+      margin-top: 0.6rem;
+      font-family: "Lucida Console", Monaco, monospace;
       font-size: 0.9rem;
+      line-height: 1.55;
+      color: #d9ffdd;
     }
 
-    .tag {
+    .terminal-line {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .terminal-prefix {
+      color: rgba(139, 255, 135, 0.9);
+      margin-right: 0.6rem;
+    }
+
+    .terminal-status-label {
+      color: rgba(216, 255, 215, 0.82);
+      margin-right: 0.35rem;
+    }
+
+    .terminal-status-value {
+      color: var(--aa-green);
+    }
+
+    /* Initializing line with cursor */
+    .terminal-line.init {
+      display: flex;
+      align-items: baseline;
+      gap: 0.35rem;
+    }
+
+    .cursor {
       display: inline-block;
-      margin-top: 1.4rem;
-      padding: 0.35rem 1.1rem;
+      width: 0.6ch;
+      height: 1em;
+      background: var(--aa-green);
+      margin-left: 0.1rem;
+      animation: cursor-blink 1s steps(2, start) infinite;
+    }
+
+    .footer-tag {
+      margin-top: auto;
+      align-self: flex-start;
+      font-family: "Lucida Console", Monaco, monospace;
+      font-size: 0.75rem;
+      letter-spacing: 0.14em;
+      text-transform: uppercase;
+      padding: 0.25rem 0.9rem;
       border-radius: 999px;
-      border: 1px solid rgba(139, 255, 135, 0.85);
+      border: 1px solid rgba(139, 255, 135, 0.7);
       color: var(--aa-green);
       background: radial-gradient(circle at top, rgba(139, 255, 135, 0.18), transparent 70%);
-      box-shadow:
-        0 0 10px rgba(139, 255, 135, 0.45),
-        0 0 0 1px rgba(0, 0, 0, 0.6);
-      font-size: 0.78rem;
-      text-transform: uppercase;
-      letter-spacing: 0.16em;
+      box-shadow: 0 0 10px rgba(139, 255, 135, 0.35);
+    }
+
+    @keyframes scan-down {
+      0% {
+        top: -25%;
+      }
+      100% {
+        top: 110%;
+      }
+    }
+
+    @keyframes cursor-blink {
+      0%, 49% {
+        opacity: 1;
+      }
+      50%, 100% {
+        opacity: 0;
+      }
+    }
+
+    @keyframes grain-move {
+      0% {
+        transform: translate3d(0, 0, 0);
+      }
+      100% {
+        transform: translate3d(-20px, -30px, 0);
+      }
+    }
+
+    @media (max-width: 600px) {
+      .crt-frame {
+        padding: 1.6rem 1.4rem;
+      }
+      .crt-screen {
+        padding: 1.2rem 1.3rem;
+      }
+      .brand {
+        font-size: 1.2rem;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>ARTIFICIAL ALLIANCE</h1>
-    <h2>Initializing...</h2>
+  <div class="crt-frame">
+    <div class="crt-screen">
+      <div class="scanline"></div>
+
+      <div class="crt-content">
+        <div>
+          <div class="brand">ARTIFICIAL ALLIANCE</div>
+          <div class="brand-subline">public portal · pre-launch</div>
+        </div>
+
+        <div class="terminal">
+          <div class="terminal-line">
+            <span class="terminal-prefix">C://boot</span>
+            <span class="terminal-status-label">build</span>
+            <span class="terminal-status-value">v0.0.1</span>
+          </div>
+          <div class="terminal-line">
+            <span class="terminal-prefix">C://boot</span>
+            <span class="terminal-status-label">status</span>
+            <span class="terminal-status-value">standby</span>
+          </div>
+          <div class="terminal-line init">
+            <span class="terminal-prefix">C://boot</span>
+            <span>Initializing...</span>
+            <span class="cursor"></span>
+          </div>
+        </div>
+
+        <!-- <div class="footer-tag">.audio</div> -->
+      </div>
+    </div>
   </div>
 </body>
 </html>
