--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      paddign: 1rem;
       /* background: radial-gradient(circle at top, #121622 0, #040509 45%, #000 100%); */
       color: #e6ffe8;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
@@ -35,6 +36,7 @@
       position: relative;
       width: min(900px, 94vw);
       aspect-ratio: 4 / 3;
+      max-height: calc(100vh - 2rem);
       background: radial-gradient(circle at center, #060910 0, #020308 65%, #000 100%);
       border-radius: 26px;
       padding: 2.2rem 2.6rem;
@@ -252,6 +254,25 @@
         font-size: 1.2rem;
       }
     }
+    @media (max-width: 600px) {
+      body {
+        align-items: flex-start;     /* start at top instead of strict centering */
+        padding: 0.75rem;           /* slightly tighter padding */
+      }
+    
+      .crt-frame {
+        width: 100%;
+        aspect-ratio: auto;         /* let height grow naturally */
+        height: auto;
+        padding: 1.2rem 1.2rem;     /* reduce internal padding */
+        border-radius: 18px;
+      }
+    
+      .crt-screen {
+        padding: 1rem 1.1rem;       /* also tighten the inside */
+      }
+    }
+
   </style>
 </head>
 <body>
